# SoMapping

./: .gitignore  .gitmodules  README.md  debug.md  lvkun_reference.md
plane_fusion_final/: CMakeLists.txt  Doxyfile  IncludeProjectFiles.cmake  command  main_code.cpp  test_alignment.cpp  test_cudbscan.cpp  test_glog.cpp  test_qt.cpp
plane_fusion_final/Associator/: Associator.cpp  Associator.h
plane_fusion_final/Config/: Config.cpp  Config.h  config.json
plane_fusion_final/Data_engine/: Data_engine.cpp  Data_engine.h  Data_loader.cpp  Data_loader.h  Data_writer.cpp  Data_writer.h  Image_loader.cpp  Image_loader.h  Image_loader1.cpp
plane_fusion_final/Environment_Initializer/: Environment_Initializer.cpp  Environment_Initializer.h
plane_fusion_final/Feature_detector/: Feature_detector.cpp  Feature_detector.h  Feature_detector_KernelFunc.cu  Feature_detector_KernelFunc.cuh  ORBextractor.cpp  ORBextractor.h
plane_fusion_final/Files/: GBJ.txt  ICL.txt
plane_fusion_final/Files/Azurekinect/: calib.txt  realsense.yaml  rovio.info
plane_fusion_final/Files/D435i/: calib.txt  realsense.yaml  rovio.info
plane_fusion_final/Files/ScanNet/train/: scene0000_00_TUM_Format.txt  scene0000_00_TUM_Format_alignment.txt  scene0006_01_TUM_Format_alignmen.txt  scene0009_00_TUM_Format_alignment.txt  scene0069_00_TUM_Format_alignment.txt  scene0427_00_TUM_Format.txt
plane_fusion_final/Files/TUM/: TUM1.txt  TUM2.txt  TUM3.txt
plane_fusion_final/Files/realsense/: calib.txt  camera-information  rovio.info
plane_fusion_final/Log/: Log.cpp  Log.h
plane_fusion_final/Main_engine/: Main_engine.cpp  Main_engine.h
plane_fusion_final/Map_engine/: Feature_map.cpp  Feature_map.h  Map_engine.cpp  Map_engine.h  Map_optimizer.h  Mesh_generator.cpp  Mesh_generator.h  Mesh_generator_KernelFunc.cu  Mesh_generator_KernelFunc.cuh  Mesh_structure.h  Plane_map.cpp  Plane_map.h  Plane_map_KernelFunc.cu  Plane_map_KernelFunc.cuh  Plane_pixel_device_interface.cuh  Voxel_KernelFunc.cu  Voxel_KernelFunc.cuh  Voxel_device_interface.cuh  Voxel_map.cpp  Voxel_map.h  Voxel_map_KernelFunc.cu  Voxel_map_KernelFunc.cuh  voxel_defination.h  voxel_definition.h
plane_fusion_final/OurLib/: My_frame.cpp  My_frame.h  My_matrix.h  My_pose.cpp  My_pose.h  My_quaternions.cpp  My_quaternions.h  My_quaternions_interface.cpp  My_quaternions_interface.h  My_vector.h  Trajectory_node.cpp  Trajectory_node.h  device_color_table.cuh  my_GL_functions.cpp  my_GL_functions.h  my_GL_geometry.cpp  my_GL_geometry.h  my_math_functions.cpp  my_math_functions.h  reduction_KernelFunc.cuh
plane_fusion_final/Plane_detector/: Plane_KernelFunc.cu  Plane_KernelFunc.cuh  Plane_detector.cpp  Plane_detector.h  Plane_detector_KernelFunc.cu  Plane_detector_KernelFunc.cuh  Plane_structure.h
plane_fusion_final/Preprocess_engine/: Hierarchy_image.h  Preprocess_KernelFunc.cu  Preprocess_KernelFunc.cuh  Preprocess_engine.cpp  Preprocess_engine.h
plane_fusion_final/Render_engine/: Render_KernelFunc.cu  Render_KernelFunc.cuh  Render_engine.cpp  Render_engine.h
plane_fusion_final/SLAM_system/: SLAM_system.cpp  SLAM_system.h  SLAM_system_settings.cpp  SLAM_system_settings.h
plane_fusion_final/Stream/: grabstream.cpp  grabstream.h  main.cpp  mainwindow.h
plane_fusion_final/Timer/: Timer.cpp  Timer.h
plane_fusion_final/Track_engine/: Solver_functor.cpp  Solver_functor.h  Track_KernelFunc.cu  Track_KernelFunc.cuh  Track_engine.cpp  Track_engine.h  Track_structure.h
plane_fusion_final/UI_engine/: UI_engine.cpp  UI_engine.h  UI_interactive_events.cpp  UI_parameters.cpp  UI_parameters.h
plane_fusion_final/cmake/: Flags.cmake  UseCUDA.cmake  UseGLEW.cmake  UseGLUT.cmake  cuda_compute_capability.cpp
plane_fusion_final/cudbscan/: DBSCANCPU.hpp  Timer.hpp  cuDBSCAN.cu  cuDBSCAN.hpp
stream/: images.qrc  showstream.cpp  showstream.h
tools/: extract_matrix.py  extract_trajectory.py  extract_trajectory_opengl.py  generate.py  scannetv2_nyu40id.py  scene0000_00.txt  scene0427_00.txt  vis_nyu40.py
tools/scannet_info/: mylabel.csv
